Adding PUT and DEL, data validation
