# routes/town.js
@@ -7,9 +7,8 @@ const swaggerDocument = require('../swaggerTown.json');
 route.get("/towns/", controller.displayTowns);
 route.get("/inventory/", controller.displayInventory);
 route.post("/towns/addTown/", controller.addTown);
-/*route.get("/contacts/update/", controller.updateContactView);
-route.put("/contacts/updateContact/", controller.updateContact);
-route.delete("/contacts/delete/", controller.deleteContact);*/
+route.put("/towns/updateTown/", controller.updateTown);
+route.delete("/towns/deleteTown/", controller.deleteTown);
 
 route.use('/api-docs', swaggerUi.serve);
 route.get('/api-docs', swaggerUi.setup(swaggerDocument));
